--- a/languages/wpp-fi.po
+++ b/languages/wpp-fi.po
@@ -1,9 +1,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: WP-Palvelu Plugin\n"
-"POT-Creation-Date: 2015-10-05 13:22+0200\n"
-"PO-Revision-Date: 2015-10-05 13:26+0200\n"
-"Last-Translator: Onni Hakala <onni@koodimonni.fi>\n"
+"Report-Msgid-Bugs-To: https://github.com/Seravo/wp-palvelu-plugin/issues\n"
+"POT-Creation-Date: 2015-09-26 15:44+0200\n"
+"PO-Revision-Date: 2017-02-10 16:45+0200\n"
+"Last-Translator: Otto Kekäläinen <otto@seravo.fi>\n"
 "Language-Team: Onni Hakala <onni@koodimonni.fi>\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
@@ -12,24 +13,60 @@ msgstr ""
 "X-Generator: Poedit 1.7.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
-"_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SearchPath-0: .\n"
 
-#: modules/purge-cache.php:24
-#, php-format
-msgid ""
-"WP-Palvelu uses proxy to deliver lightning fast responses to your visitors. "
-"Cached pages will be refreshed every %s. This button is used for clearing "
-"all cached pages from the frontend proxy immediately."
-msgstr ""
-"WP-palvelu käyttää välipalvelinta, jotta sivuston kävijät saavat "
-"salamannopean sivunlatauksen. Välimuistitettuja sivuja päivitetään %s "
-"välein. Voit käyttää tätä näppäintä, jos haluat tyhjentää välimuistin heti."
+#: lib/reports-page.php:3
+#: modules/reports.php:27
+msgid "Reports"
+msgstr "Raportit"
 
-#: modules/purge-cache.php:25
+#: lib/reports-page.php:5
+msgid "HTTP request statistics"
+msgstr "HTTP-liikennetilastot"
+
+#: lib/reports-page.php:7
+msgid "These monthly reports are generated from the site's HTTP access logs. They show every HTTP request of the site, including traffic from both humans and bots. Requests blocked at the firewall level (for example during a DDOS attack) are not logged. Log files can be accessed also directly on the server at <code>/data/slog/html/goaccess-*.html</code>."
+msgstr "Nämä kuukausittaiset tilastot on tehty sivuston HTTP-liikennelokeista. Niihin sisältyy kaikki sivuston HTTP-pyynnöt, mukaan lukien sekä ihmisten että erilaisten bottien tekemät. Palomuuritasolla estetyt HTTP-pyynnöt (esim DDOS-hyökkäyksen aikana) eivät tule lokiin. Lokitiedostoja voi selata suoraan myös palvelimella polussa <code>/data/slog/html/goaccess-*.html</code>."
+
+#: lib/reports-page.php:12
+msgid "Month"
+msgstr "Kuukausi"
+
+#: lib/reports-page.php:13
+msgid "HTTP requests"
+msgstr "HTTP-pyynnöt"
+
+#: lib/reports-page.php:14
+msgid "Report"
+msgstr "Raportti"
+
+#: lib/reports-page.php:29
+msgid "No reports found at /data/slog/html/. Reports should be available within a month of the creation of a new site."
+msgstr "Raportteja ei löytynyt polusta /data/slog/html/. Raportit tulisi olla saatavilla noin kuukauden kuluessa uuden sivuston perustamisesta."
+
+#: lib/reports-page.php:63
+msgid "View report"
+msgstr "Näytä raportti"
+
+#: lib/reports-page.php:72
+msgid "Disk usage"
+msgstr "Levytilan käyttö"
+
+#: lib/reports-page.php:74
+msgid "Total size of <code>/data</code> is"
+msgstr "Levytilan käyttö yhteensä polussa <code>/data</code> on"
+
+#: lib/reports-page.php:79
+msgid "Biggest directories:"
+msgstr "Suurimmat hakemistot:"
+
+#: modules/purge-cache.php:26
+msgid "WP-Palvelu uses proxy to deliver lightning fast responses to your visitors. Cached pages will be refreshed every %s. This button is used for clearing all cached pages from the frontend proxy immediately."
+msgstr "WP-palvelu käyttää välipalvelinta, jotta sivuston kävijät saavat salamannopean sivunlatauksen. Välimuistitettuja sivuja päivitetään %s välein. Voit käyttää tätä näppäintä, jos haluat tyhjentää välimuistin heti."
+
+#: modules/purge-cache.php:27
 msgid "Purge Cache"
 msgstr "Tyhjennä välimuisti"
 
@@ -41,39 +78,25 @@ msgstr "Onnistui:"
 msgid "The cache was flushed"
 msgstr "Välimuisti tyhjennetty"
 
-#: modules/wpp-certificate-login.php:56 modules/wpp-certificate-login.php:152
-#: modules/wpp-certificate-login.php:169
-msgid "ERROR"
-msgstr "VIRHE"
-
-#: modules/wpp-certificate-login.php:56
-msgid "You can't use this login without providing a https client certificate."
-msgstr ""
-"Et voi käyttää tätä kirjautumistapaa ilman https client -sertifikaattia."
-
-#: modules/wpp-certificate-login.php:152
-#, php-format
-msgid ""
-"Certificate authentication was successful but it doesn't provide value for "
-"'emailAddress': %s"
-msgstr ""
-"Sertifikaatilla autentikointi onnistui, mutta se ei sisällä kenttää "
-"'emailAddress': %s"
-
-#: modules/wpp-certificate-login.php:169
-#, php-format
-msgid "SSL-certificate provided user: %s which was not found in database."
-msgstr "SSL-sertifikaatin käyttäjää: %s ei löytynyt tietokannasta."
-
-#: modules/wpp-certificate-login.php:200
-msgid "WP-Palvelu.fi Admin"
-msgstr "WP-palvelu.fi Ylläpitäjä"
-
+#. #-#-#-#-#  wpp.pot (WP-Palvelu Plugin 1.3.7)  #-#-#-#-#
+#. Description of the plugin/theme
 #: wp-palvelu-plugin.php:28
-msgid ""
-"Enhances WordPress with WP-Palvelu.fi specific features and integrations."
-msgstr ""
-"Parantaa WordPressin toimintaa lisäämällä WP-Palvelu.fi:n ominaisuuksia."
+msgid "Enhances WordPress with WP-Palvelu.fi specific features and integrations."
+msgstr "Parantaa WordPressin toimintaa lisäämällä WP-Palvelu.fi:n ominaisuuksia."
 
-#~ msgid "WP-Palvelu Plugin"
-#~ msgstr "WP-palvelu.fi Lisäosa"
+#. Plugin Name of the plugin/theme
+msgid "WP-Palvelu Plugin"
+msgstr "WP-palvelu.fi Lisäosa"
+
+#. Plugin URI of the plugin/theme
+msgid "https://github.com/Seravo/wp-palvelu-plugin"
+msgstr ""
+
+#. Author of the plugin/theme
+msgid "Seravo Oy"
+msgstr ""
+
+#. Author URI of the plugin/theme
+msgid "https://seravo.fi"
+msgstr ""
+
