--- a/languages/wpp.pot
+++ b/languages/wpp.pot
@@ -2,13 +2,9 @@
 # This file is distributed under the GPL v3.
 msgid ""
 msgstr ""
-"Project-Id-Version: WP-Palvelu Plugin\n"
-"Report-Msgid-Bugs-To: https://github.com/Seravo/wp-palvelu-plugin/issues\n"
-"POT-Creation-Date: 2015-09-26 15:44+0200\n"
-"PO-Revision-Date: 2015-09-26 15:44+0200\n"
-"Last-Translator: Onni Hakala <onni@koodimonni.fi>\n"
-"Language-Team: \n"
-"Language: en\n"
+"Project-Id-Version: Seravo Plugin 1.4.0\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
+"POT-Creation-Date: 2017-02-10 21:33:42+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -75,38 +71,37 @@ msgstr ""
 msgid "Biggest directories:"
 msgstr ""
 
-#: modules/purge-cache.php:26
+#: modules/purge-cache.php:25
 msgid ""
-"WP-Palvelu uses proxy to deliver lightning fast responses to your visitors. "
-"Cached pages will be refreshed every %s. This button is used for clearing "
-"all cached pages from the frontend proxy immediately."
+"Seravo.com uses front proxies to deliver lightning fast responses to your "
+"visitors. Cached pages will be refreshed every %s. This button is used for "
+"clearing all cached pages from the frontend proxy immediately."
 msgstr ""
 
-#: modules/purge-cache.php:27
+#: modules/purge-cache.php:26
 msgid "Purge Cache"
 msgstr ""
 
-#: modules/purge-cache.php:93
+#: modules/purge-cache.php:92
 msgid "Success:"
 msgstr ""
 
-#: modules/purge-cache.php:93
+#: modules/purge-cache.php:92
 msgid "The cache was flushed"
 msgstr ""
 
-#. #-#-#-#-#  wpp.pot (WP-Palvelu Plugin 1.3.7)  #-#-#-#-#
+#. #-#-#-#-#  wpp.pot (Seravo Plugin 1.4.0)  #-#-#-#-#
 #. Description of the plugin/theme
-#: wp-palvelu-plugin.php:28
-msgid ""
-"Enhances WordPress with WP-Palvelu.fi specific features and integrations."
+#: seravo-plugin.php:29
+msgid "Enhances WordPress with Seravo.com specific features and integrations."
 msgstr ""
 
 #. Plugin Name of the plugin/theme
-msgid "WP-Palvelu Plugin"
+msgid "Seravo Plugin"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "https://github.com/Seravo/wp-palvelu-plugin"
+msgid "https://github.com/Seravo/seravo-plugin"
 msgstr ""
 
 #. Author of the plugin/theme
@@ -114,5 +109,5 @@ msgid "Seravo Oy"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "https://seravo.fi"
+msgid "https://seravo.com/"
 msgstr ""
