--- a/languages/seravo-fi.po
+++ b/languages/seravo-fi.po
@@ -2,36 +2,32 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WP-Palvelu Plugin\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
-"POT-Creation-Date: 2017-02-10 21:33:42+00:00\n"
-"PO-Revision-Date: 2017-02-10 23:55+0200\n"
+"POT-Creation-Date: 2017-06-01 08:31+0300\n"
+"PO-Revision-Date: 2017-06-01 08:32+0300\n"
 "Last-Translator: Otto Kekäläinen <otto@seravo.fi>\n"
 "Language-Team: Onni Hakala <onni@koodimonni.fi>\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.7.1\n"
+"X-Generator: Poedit 2.0.2\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
+"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
+"_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SearchPath-0: .\n"
 
-#: modules/logs.php:62
-#: modules/logs.php:63
-msgid "Logs"
-msgstr "Lokit"
+#: lib/domains-page.php:5
+msgid "Cheatin&#8217; uh?"
+msgstr ""
 
-#: modules/logs.php:96
-msgid "No logs found in <code>/data/log/</code>."
-msgstr "Lokeja ei löytynyt hakemistosta <code>/data/log/</code>."
+#: lib/domains-page.php:6
+msgid "Sorry, you are not allowed to access domains."
+msgstr ""
 
-#: modules/logs.php:155
-msgid "File %s does not exist or we don't have permissions to read it"
-msgstr "Tiedostoa %s ei ole olemassa tai käyttöoikeudet eivät riitä lukemaan sitä"
-
-#: lib/reports-page.php:3
-#: modules/reports.php:27
+#: lib/reports-page.php:3 modules/reports.php:26
 msgid "Reports"
 msgstr "Raportit"
 
@@ -40,8 +36,19 @@ msgid "HTTP request statistics"
 msgstr "HTTP-liikennetilastot"
 
 #: lib/reports-page.php:7
-msgid "These monthly reports are generated from the site's HTTP access logs. They show every HTTP request of the site, including traffic from both humans and bots. Requests blocked at the firewall level (for example during a DDOS attack) are not logged. Log files can be accessed also directly on the server at <code>/data/slog/html/goaccess-*.html</code>."
-msgstr "Nämä kuukausittaiset tilastot on tehty sivuston HTTP-liikennelokeista. Niihin sisältyy kaikki sivuston HTTP-pyynnöt, mukaan lukien sekä ihmisten että erilaisten bottien tekemät. Palomuuritasolla estetyt HTTP-pyynnöt (esim DDOS-hyökkäyksen aikana) eivät tule lokiin. Lokitiedostoja voi selata suoraan myös palvelimella polussa <code>/data/slog/html/goaccess-*.html</code>."
+msgid ""
+"These monthly reports are generated from the site's HTTP access logs. They "
+"show every HTTP request of the site, including traffic from both humans and "
+"bots. Requests blocked at the firewall level (for example during a DDOS "
+"attack) are not logged. Log files can be accessed also directly on the "
+"server at <code>/data/slog/html/goaccess-*.html</code>."
+msgstr ""
+"Nämä kuukausittaiset tilastot on tehty sivuston HTTP-liikennelokeista. "
+"Niihin sisältyy kaikki sivuston HTTP-pyynnöt, mukaan lukien sekä ihmisten "
+"että erilaisten bottien tekemät. Palomuuritasolla estetyt HTTP-pyynnöt (esim "
+"DDOS-hyökkäyksen aikana) eivät tule lokiin. Lokitiedostoja voi selata "
+"suoraan myös palvelimella polussa <code>/data/slog/html/goaccess-*.html</"
+"code>."
 
 #: lib/reports-page.php:12
 msgid "Month"
@@ -56,8 +63,12 @@ msgid "Report"
 msgstr "Raportti"
 
 #: lib/reports-page.php:29
-msgid "No reports found at /data/slog/html/. Reports should be available within a month of the creation of a new site."
-msgstr "Raportteja ei löytynyt polusta /data/slog/html/. Raportit tulisi olla saatavilla noin kuukauden kuluessa uuden sivuston perustamisesta."
+msgid ""
+"No reports found at /data/slog/html/. Reports should be available within a "
+"month of the creation of a new site."
+msgstr ""
+"Raportteja ei löytynyt polusta /data/slog/html/. Raportit tulisi olla "
+"saatavilla noin kuukauden kuluessa uuden sivuston perustamisesta."
 
 #: lib/reports-page.php:63
 msgid "View report"
@@ -75,9 +86,87 @@ msgstr "Levytilan käyttö yhteensä polussa <code>/data</code> on"
 msgid "Biggest directories:"
 msgstr "Suurimmat hakemistot:"
 
+#: modules/check-default-email.php:29
+#, php-format
+msgid ""
+"Warning: Default email value found. Change it to your own email address <a "
+"href=\"%s/wp-admin/options-general.php\">here</a>"
+msgstr ""
+"Varoitus: Oletussähköpostiosoite on käytössä. Vaihda se omaksi "
+"sähköpostiosoitteeksesi <a href=\"%s/wp-admin/options-general.php\">täällä</"
+"a>"
+
+#: modules/check-https.php:29
+msgid ""
+"Error with HTTPS protocol. Check <a href=\"https://make.wordpress.org/"
+"support/user-manual/web-publishing/https-for-wordpress/\">here</a> for more "
+"information."
+msgstr ""
+"HTTPS-protokolla ei ole käytössä WordPressin asetuksissa. Katso lisää <a "
+"href=\"https://wp-palvelu.fi/blogi/https-kaikille-ja-aina/\">täältä</a>."
+
+#: modules/instance-switcher.php:101
+msgid "Now in"
+msgstr ""
+
+#: modules/instance-switcher.php:132
+msgid "Exit Shadow"
+msgstr ""
+
+#: modules/instance-switcher.php:141
+msgid "Shadows explained at Seravo.com/docs"
+msgstr ""
+
+#: modules/instance-switcher.php:155
+#, php-format
+msgid "Your current shadow instance is %s."
+msgstr ""
+
+#: modules/instance-switcher.php:155
+msgid "Exit"
+msgstr "Poistu"
+
+#: modules/logs.php:63 modules/logs.php:64 modules/logs.php:113
+msgid "Logs"
+msgstr "Lokit"
+
+#: modules/logs.php:102
+msgid "No logs found in <code>/data/log/</code>."
+msgstr "Lokeja ei löytynyt hakemistosta <code>/data/log/</code>."
+
+#: modules/logs.php:146
+msgid "Filter"
+msgstr "Hae"
+
+#: modules/logs.php:147
+msgid "Maximum amount of results shown: "
+msgstr "Maksimimäärä näytettäviä lokirivejä:"
+
+#: modules/logs.php:164
+#, php-format
+msgid "File %s does not exist or we don't have permissions to read it."
+msgstr ""
+"Tiedostoa %s ei ole olemassa tai käyttöoikeudet eivät riitä lukemaan sitä"
+
+#: modules/logs.php:167
+msgid "Log empty"
+msgstr "Loki on tyhjä"
+
+#: modules/logs.php:169
+#, php-format
+msgid "Showing %s rows"
+msgstr "Näytetään %s riviä"
+
 #: modules/purge-cache.php:25
-msgid "Seravo.com uses front proxies to deliver lightning fast responses to your visitors. Cached pages will be refreshed every %s. This button is used for clearing all cached pages from the frontend proxy immediately."
-msgstr "WP-palvelu.fi käyttää välipalvelinta, jotta sivuston kävijät saavat salamannopean sivunlatauksen. Välimuistitettuja sivuja päivitetään %s välein. Voit käyttää tätä näppäintä, jos haluat tyhjentää välimuistin heti."
+#, php-format
+msgid ""
+"Seravo.com uses front proxies to deliver lightning fast responses to your "
+"visitors. Cached pages will be refreshed every %s. This button is used for "
+"clearing all cached pages from the frontend proxy immediately."
+msgstr ""
+"WP-palvelu.fi käyttää välipalvelinta, jotta sivuston kävijät saavat "
+"salamannopean sivunlatauksen. Välimuistitettuja sivuja päivitetään %s "
+"välein. Voit käyttää tätä näppäintä, jos haluat tyhjentää välimuistin heti."
 
 #: modules/purge-cache.php:26
 msgid "Purge Cache"
@@ -91,30 +180,13 @@ msgstr "Onnistui:"
 msgid "The cache was flushed"
 msgstr "Välimuisti tyhjennetty"
 
-#: modules/check-https.php:19
-msgid "Error with HTTPS protocol. Check <a href=\"https://make.wordpress.org/support/user-manual/web-publishing/https-for-wordpress/\">here</a> for more information."
-msgstr "HTTPS-protokolla ei ole käytössä WordPressin asetuksissa. Katso lisää <a href=\"https://wp-palvelu.fi/blogi/https-kaikille-ja-aina/\">täältä</a>."
+#~ msgid "Showing %s most recent entries"
+#~ msgstr "Näytetään %s viimeisintä lokiriviä"
 
-#: modules/check-default-email.php:30
-msgid "Warning: Default email value found. Change it to your own email address <a href=\"%s/wp-admin/options-general.php\">here</a>"
-msgstr "Varoitus: Oletussähköpostiosoite on käytössä. Vaihda se omaksi sähköpostiosoitteeksesi <a href=\"%s/wp-admin/options-general.php\">täällä</a>"
+#~ msgid "Seravo Plugin"
+#~ msgstr "WP-palvelu.fi-lisäosa"
 
-#. Plugin Name of the plugin/theme
-msgid "Seravo Plugin"
-msgstr "WP-palvelu.fi-lisäosa"
-
-#. Plugin URI of the plugin/theme
-msgid "https://github.com/Seravo/seravo-plugin"
-msgstr ""
-
-#. Description of the plugin/theme
-msgid "Enhances WordPress with Seravo.com specific features and integrations."
-msgstr "Parantaa WordPressin toimintaa lisäämällä WP-palvelu.fi:n ominaisuuksia."
-
-#. Author of the plugin/theme
-msgid "Seravo Oy"
-msgstr ""
-
-#. Author URI of the plugin/theme
-msgid "https://seravo.com/"
-msgstr ""
+#~ msgid ""
+#~ "Enhances WordPress with Seravo.com specific features and integrations."
+#~ msgstr ""
+#~ "Parantaa WordPressin toimintaa lisäämällä WP-palvelu.fi:n ominaisuuksia."
