--- a/languages/seravo-fi.po
+++ b/languages/seravo-fi.po
@@ -2,15 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WP-Palvelu Plugin\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
-"POT-Creation-Date: 2017-06-21 12:51+0300\n"
-"PO-Revision-Date: 2017-06-21 13:05+0300\n"
+"POT-Creation-Date: 2017-06-27 09:55+0300\n"
+"PO-Revision-Date: 2017-06-27 09:56+0300\n"
 "Last-Translator: Otto Kekäläinen <otto@seravo.fi>\n"
 "Language-Team: Onni Hakala <onni@koodimonni.fi>\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.9\n"
+"X-Generator: Poedit 2.0.2\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
@@ -90,11 +90,11 @@ msgstr "Levytilan käyttö yhteensä polussa <code>/data</code> on"
 msgid "Biggest directories:"
 msgstr "Suurimmat hakemistot:"
 
-#: lib/search-replace-page.php:9
+#: lib/search-replace-page.php:3
 msgid "Search-replace tool"
 msgstr "Etsi ja korvaa -työkalu"
 
-#: lib/search-replace-page.php:10
+#: lib/search-replace-page.php:4
 msgid ""
 "With this tool you can run wp search-replace. For your own safety, dry-run "
 "has to be ran before the actual search-replace"
@@ -102,31 +102,34 @@ msgstr ""
 "Tämän työkalun avulla voit ajaa komennon wp search-replace.  Turvallisuuden "
 "vuoksi on ajettava kuiva-ajo (dry-run) ennen kun tehdään muutoksia."
 
-#: lib/search-replace-page.php:13
+#: lib/search-replace-page.php:7
 msgid "From:"
 msgstr "Mistä:"
 
-#: lib/search-replace-page.php:14
+#: lib/search-replace-page.php:8
 msgid "To:"
 msgstr "Mihin:"
 
-#: lib/search-replace-page.php:19
+#: lib/search-replace-page.php:13
 msgid "Skip backups"
 msgstr "Ohita varmuuskopiointi"
 
-#: lib/search-replace-page.php:21
+#: lib/search-replace-page.php:15
 msgid "All tables"
 msgstr "Kaikki taulut"
 
 # lib/search-replace-page.php:23
+#: lib/search-replace-page.php:17
 msgid "Network"
 msgstr "Network"
 
 # lib/search-replace-page.php:27
+#: lib/search-replace-page.php:21
 msgid "Run dry-run"
 msgstr "Aja kuiva-ajo"
 
 # lib/search-replace-page.php:28
+#: lib/search-replace-page.php:22
 msgid "Run wp search-replace"
 msgstr "Aja wp search-replace"
 
@@ -267,6 +270,52 @@ msgstr "Loki on tyhjä"
 #, php-format
 msgid "Showing %s rows"
 msgstr "Näytetään %s riviä"
+
+#: modules/optimize-images.php:25 modules/optimize-images.php:64
+msgid "Optimize Images"
+msgstr "Kuvien maksimiresoluutio"
+
+#: modules/optimize-images.php:34
+msgid "Limit Image Resolution"
+msgstr "Rajoita kuvien resoluutiota"
+
+#: modules/optimize-images.php:36
+msgid "Maximum Image Width (px)"
+msgstr "Suurin sallittu kuvan leveys (px)"
+
+#: modules/optimize-images.php:38
+msgid "Maximum Image Height (px)"
+msgstr "Suurin sallittu kuvan korkeus (px)"
+
+#: modules/optimize-images.php:74
+msgid "Save"
+msgstr "Tallenna"
+
+#: modules/optimize-images.php:81
+msgid "Width"
+msgstr "Leveys"
+
+#: modules/optimize-images.php:87
+msgid "Height"
+msgstr "Korkeus"
+
+#: modules/optimize-images.php:95
+msgid ""
+"Change the maximum image size for your site. Using a smaller image size\n"
+"            significantly improves site performance and saves disk space."
+msgstr ""
+"Rajoita helposti sivustosi kuvien kokoa. Pienempi kuvakoko näkyy sivustolla "
+"nopeampana latausaikana ja säästää levytilaa palvelimella."
+
+#: modules/optimize-images.php:102
+#, php-format
+msgid "The minimum width for image optimisation is %s px."
+msgstr "Suurimman sallitun kuvan leveyden tulee olla vähintään %s px."
+
+#: modules/optimize-images.php:111
+#, php-format
+msgid "The minimum height for image optimisation is %s px."
+msgstr "Suurimman sallitun kuvan korkeuden tulee olla vähintään %s px."
 
 #: modules/purge-cache.php:25
 #, php-format
