--- a/languages/seravo-fi.po
+++ b/languages/seravo-fi.po
@@ -2,15 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WP-Palvelu Plugin\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
-"POT-Creation-Date: 2017-06-12 13:18+0300\n"
-"PO-Revision-Date: 2017-06-12 13:22+0300\n"
+"POT-Creation-Date: 2017-06-21 12:51+0300\n"
+"PO-Revision-Date: 2017-06-21 13:05+0300\n"
 "Last-Translator: Otto Kekäläinen <otto@seravo.fi>\n"
 "Language-Team: Onni Hakala <onni@koodimonni.fi>\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.2\n"
+"X-Generator: Poedit 1.8.9\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
@@ -89,6 +89,46 @@ msgstr "Levytilan käyttö yhteensä polussa <code>/data</code> on"
 #: lib/reports-page.php:79
 msgid "Biggest directories:"
 msgstr "Suurimmat hakemistot:"
+
+#: lib/search-replace-page.php:9
+msgid "Search-replace tool"
+msgstr "Etsi ja korvaa -työkalu"
+
+#: lib/search-replace-page.php:10
+msgid ""
+"With this tool you can run wp search-replace. For your own safety, dry-run "
+"has to be ran before the actual search-replace"
+msgstr ""
+"Tämän työkalun avulla voit ajaa komennon wp search-replace.  Turvallisuuden "
+"vuoksi on ajettava kuiva-ajo (dry-run) ennen kun tehdään muutoksia."
+
+#: lib/search-replace-page.php:13
+msgid "From:"
+msgstr "Mistä:"
+
+#: lib/search-replace-page.php:14
+msgid "To:"
+msgstr "Mihin:"
+
+#: lib/search-replace-page.php:19
+msgid "Skip backups"
+msgstr "Ohita varmuuskopiointi"
+
+#: lib/search-replace-page.php:21
+msgid "All tables"
+msgstr "Kaikki taulut"
+
+# lib/search-replace-page.php:23
+msgid "Network"
+msgstr "Network"
+
+# lib/search-replace-page.php:27
+msgid "Run dry-run"
+msgstr "Aja kuiva-ajo"
+
+# lib/search-replace-page.php:28
+msgid "Run wp search-replace"
+msgstr "Aja wp search-replace"
 
 #: lib/tests-page.php:3 modules/tests.php:25
 msgid "Tests"
