--- a/languages/seravo-fi.po
+++ b/languages/seravo-fi.po
@@ -2,15 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WP-Palvelu Plugin\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
-"POT-Creation-Date: 2017-06-29 21:56+0300\n"
-"PO-Revision-Date: 2017-06-29 22:00+0300\n"
+"POT-Creation-Date: 2017-06-30 14:07+0300\n"
+"PO-Revision-Date: 2017-06-30 14:10+0300\n"
 "Last-Translator: Otto Kekäläinen <otto@seravo.com>\n"
 "Language-Team: Onni Hakala <onni@koodimonni.fi>\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.1\n"
+"X-Generator: Poedit 2.0.2\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
@@ -396,6 +396,14 @@ msgid ""
 msgstr ""
 "Rajoita helposti sivustosi kuvien kokoa. Pienempi kuvakoko näkyy sivustolla "
 "nopeampana latausaikana ja säästää levytilaa palvelimella."
+
+#: modules/optimize-images.php:102
+msgid "The minimum width for image optimisation is %s px."
+msgstr "Suurimman sallitun kuvan leveyden tulee olla vähintään %s px."
+
+#: modules/optimize-images.php:111
+msgid "The minimum height for image optimisation is %s px."
+msgstr "Suurimman sallitun kuvan korkeuden tulee olla vähintään %s px."
 
 #: modules/purge-cache.php:25
 msgid ""
