--- a/languages/seravo-fi.po
+++ b/languages/seravo-fi.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: WP-Palvelu Plugin\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
 "POT-Creation-Date: 2017-06-30 14:07+0300\n"
-"PO-Revision-Date: 2017-06-30 14:10+0300\n"
+"PO-Revision-Date: 2017-08-15 12:39+0300\n"
 "Last-Translator: Otto Kekäläinen <otto@seravo.com>\n"
 "Language-Team: Onni Hakala <onni@koodimonni.fi>\n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.2\n"
+"X-Generator: Poedit 2.0.3\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
@@ -286,7 +286,7 @@ msgstr ""
 
 #: modules/instance-switcher.php:103
 msgid "Now in"
-msgstr "Nyt varjossa"
+msgstr "Nyt käytössä"
 
 #: modules/instance-switcher.php:134
 msgid "Exit Shadow"
