--- a/languages/seravo-fi.po
+++ b/languages/seravo-fi.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: Seravo Plugin\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
 "POT-Creation-Date: 2018-08-15 10:14+0300\n"
-"PO-Revision-Date: 2018-08-15 10:15+0300\n"
+"PO-Revision-Date: 2018-08-15 16:38+0300\n"
 "Last-Translator: Leo Toikka <leo@seravo.fi>\n"
 "Language-Team: \n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
@@ -106,7 +106,7 @@ msgstr "Etsitään lisäosia…"
 
 #: lib/cruftfiles-page.php:93 lib/cruftfiles-page.php:99
 msgid "Unnecessary themes"
-msgstr "Tarpeettomat lisäosat"
+msgstr "Tarpeettomat teemat"
 
 #: lib/cruftfiles-page.php:105
 msgid "Find and remove themes that are unnecessary or inactive."
