--- a/languages/seravo-fi.po
+++ b/languages/seravo-fi.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: Seravo Plugin\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/seravo-plugin\n"
 "POT-Creation-Date: 2018-12-04 15:07+0200\n"
-"PO-Revision-Date: 2018-12-04 15:09+0200\n"
-"Last-Translator: Toni Laakso <toni@seravo.fi>\n"
+"PO-Revision-Date: 2018-12-05 13:48+0200\n"
+"Last-Translator: Leo Toikka <leo@seravo.fi>\n"
 "Language-Team: \n"
 "Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.1.1\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
@@ -228,7 +228,7 @@ msgstr "Automaattiset päivitykset"
 
 #: lib/updates-page.php:66
 msgid "Update Notifications with a Slack Webhook"
-msgstr "Päivitysilmoitukset Slacking webhookin avulla"
+msgstr "Päivitysilmoitukset Slackin webhookin avulla"
 
 #: lib/updates-page.php:67
 msgid ""
